spade-tests/src/snapshots/spade_tests__integration__const_generics_cannot_access_runtime_values.snap
---
source: spade-tests/src/integration.rs
---
fn test() {
    let x = 5;
    let y: uint<{x+5}> = 0;
}


error: Expected x to be a type symbol
  ┌─ testinput:3:18
  │
2 │     let x = 5;
  │         - x is a variable
3 │     let y: uint<{x+5}> = 0;
  │                  ^ Expected a type symbol
